--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "zz-mobile",
+	"name": "Vue and friends boilerplate",
 	"version": "1.0.0",
 	"description": "A Vue.js project",
-	"author": "Adrian Blanco <ablanco@theinit.com>",
+	"author": "Héctor Villar Mozo <hectorvillarm@gmail.com>",
 	"private": true,
 	"scripts": {
 		"dev": "webpack-dev-server --config build/webpack.dev.conf.js --hot",
@@ -88,11 +88,11 @@
 		"sass-loader": "^7.1.0",
 		"semver": "^5.3.0",
 		"shelljs": "^0.7.6",
-		"stylelint": "^9.9.0",
-		"stylelint-config-recommended": "^2.1.0",
+		"stylelint": "^10.1.0",
+		"stylelint-config-recommended": "^2.2.0",
 		"stylelint-config-standard": "^18.2.0",
-		"stylelint-order": "^2.0.0",
-		"stylelint-scss": "^3.4.1",
+		"stylelint-order": "^3.0.0",
+		"stylelint-scss": "^3.8.0",
 		"stylelint-webpack-plugin": "^0.10.5",
 		"uglifyjs-webpack-plugin": "^1.1.1",
 		"url-loader": "^0.5.8",
