fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Vue and friends boilerplate",
+	"name": "vue-and-friends-boilerplate",
 	"version": "1.0.0",
 	"description": "A Vue.js project",
 	"author": "Héctor Villar Mozo <hectorvillarm@gmail.com>",
